fix: trend arrow in asc order

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      href="src/assets/logo.svg"
+      sizes="any"
+      type="image/svg+xml"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Gashapon</title>
+    <title>GASHAPON</title>
   </head>
   <body>
     <div id="root"></div>
