--- a/index.html
+++ b/index.html
@@ -2,12 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link
-      rel="icon"
-      href="src/assets/logo.svg"
-      sizes="any"
-      type="image/svg+xml"
-    />
+    <link rel="icon" href="src/assets/logo.png" sizes="any" type="image/png" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
