--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>GASHAPON</title>
+    <title>GACHAREVENUE</title>
   </head>
   <body>
     <div id="root"></div>
