config: added meta tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
     <title>GACHAREVENUE</title>
+    <meta
+      name="description"
+      content="Discover the latest revenue trends, earnings, and statistics for your favorite gacha games."
+    />
+    <meta property="og:title" content="GACHAREVENUE" />
+    <meta property="og:url" content="https://www.gacharevenue.com" />
+    <meta
+      property="og:description"
+      content="Discover the latest revenue trends, earnings, and statistics for your favorite gacha games."
+    />
+    <meta property="og:image" content="https://i.imgur.com/znIeTe4.jpg" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@numberiock" />
+    <meta name="twitter:title" content="GACHAREVENUE" />
+    <meta
+      name="twitter:description"
+      content="Discover the latest revenue trends, earnings, and statistics for your favorite gacha games."
+    />
+    <meta name="twitter:image" content="https://i.imgur.com/znIeTe4.jpg" />
   </head>
   <body>
     <div id="root"></div>
