config: changed summary to summary_large_image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       content="Discover the latest revenue trends, earnings, and statistics for your favorite gacha games."
     />
     <meta property="og:image" content="https://i.imgur.com/znIeTe4.jpg" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@numberiock" />
     <meta name="twitter:title" content="GACHAREVENUE" />
     <meta
