chore: add google adsense

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
       content="Discover the latest revenue trends, earnings, and statistics for your favorite gacha games."
     />
     <meta name="twitter:image" content="https://i.imgur.com/znIeTe4.jpg" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1008652700279299"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
